@@ -1,5 +1,7 @@
 04 June 2008
 
+* setw monitor-activity and set status without arguments now toggle the current
+  value; suggested by merdely.
 * New command set-window-option (alias setw) to set the single current window
   option: monitor-activity to determine whether window activity is shown in
   the status bar for that window (default off).
@@ -399,4 +401,4 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.107 2008-06-04 17:54:26 nicm Exp $
+$Id: CHANGES,v 1.108 2008-06-04 18:34:56 nicm Exp $
